<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_container"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_place_edit"
        android:layout_margin="32dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/entrez_le_nom_de_la_place"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save_place"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/name_place_edit"
        android:textAllCaps="false"
        android:text="@string/sauvegardez"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_place_found"
        android:id="@+id/osm_places_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/matrix_element_text"
        app:layout_constraintLeft_toLeftOf="@id/matrix_element_text"
        app:layout_constraintRight_toRightOf="@id/matrix_element_text"
        app:layout_constraintTop_toBottomOf="@id/btn_save_place" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_distance"
        android:id="@+id/matrix_element_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/details_places_text"
        app:layout_constraintLeft_toLeftOf="@id/details_places_text"
        app:layout_constraintRight_toRightOf="@id/details_places_text"
        app:layout_constraintTop_toBottomOf="@id/osm_places_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informations_gps_sur_la_places"
        android:id="@+id/details_places_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_get_fcm_token"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_places_text"
        android:textAllCaps="false"
        android:text="@string/fcm_token_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_distance"
        android:id="@+id/fcm_token_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintLeft_toLeftOf="@id/btn_get_fcm_token"
        app:layout_constraintRight_toRightOf="@id/btn_get_fcm_token"
        app:layout_constraintTop_toBottomOf="@id/btn_get_fcm_token" />



</androidx.constraintlayout.widget.ConstraintLayout>